26 Oct, 2018
update: triviaq questions, removed dupes
update: many cleanup scripts to FluentPDO, reduce number of queries
rename: column 12_hour to use_12_hour
update: FluentPDO, autoprefixer, browserslist
update: easier to update/add stats stats.php
update: use FluentPDO bans.php, upgrade_database.php
update: many timestamp columns to unsigned int
add: added column to topics table
change: sort order for cleanup processing cron_controller.php
update: delete deleted messages also, only update caches if cache already exists Message.php
update: check if torrent exists before deleting Torrent.php
remove: stats table, no need to store these stats in db
remove: readpost_update.php can't see any reason to reset a users read post history every 2 weeks

22 Oct, 2018
fix: check if REQUEST_URI is empty, mainly for running cron_controller.php from cli
fix: update user birthday_update.php
remove: insert method User.php
fix: don't show pager menu when only 1 page reports.php 
fix: division by 0 pu_update.php

21 Oct, 2018
fix: get from array happyhour_update.php
fix: freee_switch not resetting freeuser_update.php
fix: timesann not updating announce.php
update: set default userid userdetails.php
fix: don't show pager menu when only 1 page browse.php
add: missing torrents/users 
fix: user notification on upload to their defaul categories
update: fluentpdo, php-cs-fixer, flysystem, node-sass
fix: peers not always deleting on stop announce.php
fix: happy hour
fix: properly clear torrent caches when deleting or adding

20 Oct, 2018
fix: edit admin pages select current staffpanel.php
remove: file_put_contents logging
fix: php_info display system_view.php
update: a few more of the admin pages
add: missing file promo.php
update: most of the admin pages
fix: bug bugs.php
update: don't show pager when not more than 1 page staffbox.php, bugs.php
update: align checkboxes upload.php
update: SCEditor style
update: missing tags from breadcrumbs

18 Oct, 2038